<resources>
    <string name="app_name">Calc</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_calculator_text">Calculator</string>
    <string name="tab_history_text">History</string>
    <string name="tab_memory_text">Memory</string>
    <string name="button_sign_changer_text">+/-</string>
    <string name="digit_0">0</string>
    <string name="digit_1">1</string>
    <string name="digit_2">2</string>
    <string name="digit_3">3</string>
    <string name="digit_4">4</string>
    <string name="digit_5">5</string>
    <string name="digit_6">6</string>
    <string name="digit_7">7</string>
    <string name="digit_8">8</string>
    <string name="digit_9">9</string>
    <string name="dot">.</string>
    <string name="button_memory_add_text">M+</string>
    <string name="button_memory_subtract_text">M-</string>
    <string name="button_memory_store_text">MS</string>
    <string name="percentage_sign">%</string>
    <string name="button_math_operation_percentage_text">@string/percentage_sign</string>
    <string name="button_input_manipulation_clear_all_input_entry_text">CE</string>
    <string name="button_input_manipulation_clear_all_text">C</string>
    <string name="button_input_manipulation_delete_last_character_text">\u232b</string>
    <string name="inverse_num_sign">1/x</string>
    <string name="button_math_operation_inverse_text">@string/inverse_num_sign</string>
    <string name="power_2_sign">X^2</string>
    <string name="button_math_operation_power_2_text">@string/power_2_sign</string>
    <string name="square_root_sign">\u221a</string>
    <string name="button_math_operation_square_root_text">@string/square_root_sign</string>
    <string name="divide_sign">\u00f7</string>
    <string name="button_math_operation_divide_text">@string/divide_sign</string>
    <string name="button_digit_7_text">@string/digit_7</string>
    <string name="button_digit_8_text">@string/digit_8</string>
    <string name="button_digit_9_text">@string/digit_9</string>
    <string name="multiply_sign">x</string>
    <string name="button_math_operation_multiply_text">@string/multiply_sign</string>
    <string name="button_digit_5_text">@string/digit_5</string>
    <string name="button_digit_6_text">@string/digit_6</string>
    <string name="subtract_sign">-</string>
    <string name="minus_sign">@string/subtract_sign</string>
    <string name="button_math_operation_subtract_text">@string/subtract_sign</string>
    <string name="button_digit_1_text">@string/digit_1</string>
    <string name="button_digit_2_text">@string/digit_2</string>
    <string name="button_digit_3_text">@string/digit_3</string>
    <string name="add_sign">+</string>
    <string name="button_math_operation_add_text">@string/add_sign</string>
    <string name="button_math_operation_change_sign_text">+/-</string>
    <string name="button_digit_0_text">@string/digit_0</string>
    <string name="button_input_manipulation_add_text">@string/dot</string>
    <string name="equals_sign">=</string>
    <string name="button_math_operation_equals_text">@string/equals_sign</string>
    <string name="button_memory_clear_text">MC</string>
    <string name="button_memory_recall_text">MR</string>
    <string name="button_digit_4">@string/digit_4</string>
    <string name="one_space">" "</string>
    <string name="changed_sign_text_format">(%s)</string>
    <string name="inverse_sign_text_format">1/(%s)</string>
    <string name="power_2_text_format">(%s^2)</string>
    <string name="square_root_text_format">\u221a(%s)</string>
    <string name="max_number_of_digits_msg">Max number of digits allowed is %d\nUse History or Memory functionality</string>
    <string name="left_bracket">(</string>
    <string name="right_bracket">)</string>
    <string name="percentage_sign_text_format">%s</string>
    <string name="no_history_msg">There\'s no history yet</string>
    <string name="no_memory_msg">There\'s nothing saved in your memory</string>
    <string name="empty_formula">""</string>
    <string name="number_of_digits_out_of_allowed_bound_format_msg">Max numbers of digits allowed is %d</string>
    <string name="memory_deleted_msg">Memory deleted</string>
    <string name="memory_empty_msg">Memory empty</string>
    <string name="memory_added_msg">Added to memory\nIf not empty</string>
    <string name="memory_subtracted_msg">Subtracted from memory\nIf not empty</string>
    <string name="memory_added_new_item_msg">New memory item added.</string>
    =======
>>>>>>> e9065689d45ff34d706debd169c42a5e52c4e442
</resources>
