<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_calculator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.CalculatorFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_view_formula_shower"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:textAlignment="textEnd"
            app:autoSizeMaxTextSize="20sp"
            app:autoSizeMinTextSize="12sp"
            app:autoSizeStepGranularity="2sp"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_view_input_and_result_shower"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAlignment="textEnd"
            android:textSize="30sp"
            android:textStyle="bold"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_formula_shower" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_view_input_and_result_shower">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_memory_clear"
                    style="@style/memory_manipulation_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:text="@string/button_memory_clear_text" />

                <Button
                    android:id="@+id/button_memory_recall"
                    style="@style/memory_manipulation_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:text="@string/button_memory_recall_text" />

                <Button
                    android:id="@+id/button_memory_add"
                    style="@style/memory_manipulation_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:text="@string/button_memory_add_text" />

                <Button
                    android:id="@+id/button_memory_subtract"
                    style="@style/memory_manipulation_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:text="@string/button_memory_subtract_text" />

                <Button
                    android:id="@+id/button_memory_store"
                    style="@style/memory_manipulation_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:text="@string/button_memory_store_text" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:gravity="center">

                <Button
                    android:id="@+id/button_math_operation_percentage"
                    style="@style/math_operations_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:text="@string/button_math_operation_percentage_text" />

                <Button
                    android:id="@+id/button_math_operation_divide"
                    style="@style/math_operations_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:text="@string/button_math_operation_divide_text" />

                <Button
                    android:id="@+id/button_math_operation_multiply"
                    style="@style/math_operations_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:text="@string/button_math_operation_multiply_text" />

                <Button
                    android:id="@+id/button_math_operation_subtract"
                    style="@style/math_operations_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:text="@string/button_math_operation_subtract_text" />

                <Button
                    android:id="@+id/button_math_operation_add"
                    style="@style/math_operations_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:text="@string/button_math_operation_add_text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:gravity="center">

                <Button
                    android:id="@+id/button_digit_7"
                    style="@style/digit_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:text="@string/button_digit_7_text" />

                <Button
                    android:id="@+id/button_digit_8"
                    style="@style/digit_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:text="@string/button_digit_8_text" />

                <Button
                    android:id="@+id/button_digit_9"
                    style="@style/digit_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:text="@string/button_digit_9_text" />


                <Button
                    android:id="@+id/button_input_manipulation_clear_all"
                    style="@style/input_manipulation_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:text="@string/button_input_manipulation_clear_all_text" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:gravity="center">

                <Button
                    android:id="@+id/button_digit_4"
                    style="@style/digit_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="2dp"
                    android:layout_weight="0.25"
                    android:text="@string/button_digit_4" />

                <Button
                    android:id="@+id/button_digit_5"
                    style="@style/digit_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:text="@string/button_digit_5_text" />

                <Button
                    android:id="@+id/button_digit_6"
                    style="@style/digit_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:text="@string/button_digit_6_text" />

                <Button
                    android:id="@+id/button_input_manipulation_clear_all_input_entry"
                    style="@style/input_manipulation_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:text="@string/button_input_manipulation_clear_all_input_entry_text" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:gravity="center">

                <Button
                    android:id="@+id/button_digit_1"
                    style="@style/digit_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:text="@string/button_digit_1_text" />

                <Button
                    android:id="@+id/button_digit_2"
                    style="@style/digit_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:text="@string/button_digit_2_text" />

                <Button
                    android:id="@+id/button_digit_3"
                    style="@style/digit_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:text="@string/button_digit_3_text" />

                <Button
                    android:id="@+id/button_input_manipulation_delete_last_character"
                    style="@style/input_manipulation_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:text="@string/button_input_manipulation_delete_last_character_text" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:gravity="center">

                <Button
                    android:id="@+id/button_math_operation_change_sign"
                    style="@style/digit_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:text="@string/button_math_operation_change_sign_text" />

                <Button
                    android:id="@+id/button_digit_0"
                    style="@style/digit_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:text="@string/button_digit_0_text" />

                <Button
                    android:id="@+id/button_input_manipulation_add.dot"
                    style="@style/digit_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:text="@string/button_input_manipulation_add_text" />

                <Button
                    android:id="@+id/button_math_operation_equals"
                    style="@style/equals_button"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.25"
                    android:text="@string/button_math_operation_equals_text" />
            </LinearLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

